--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://shimig998_db_user:lJX9FTA3TvQ8eUfQ@youtubemusic.e8sjczg.mongodb.net/musicapp
+MONGODB_URI=mongodb+srv://shimig998_db_user:VCWKkXk38Amfz7K5@youtubemusic.e8sjczg.mongodb.net/
 YOUTUBE_API_KEY=AIzaSyC-r9MNSJZ1c4q5lFkXGVJWLgvE8vu1oiU
