--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-"start": "electron .", 
+    "start": "electron .",
     "server": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.13.2",
+    "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "googleapis": "^170.1.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "node-cache": "^5.1.2",
+    "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
     "electron": "^40.0.0"
