--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-"start": "electron .", 
-    "server": "node server.js"
+    "start": "electron .",
+    "server": "node server.js",
+    "dist": "electron-builder"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,21 @@
     "mongoose": "^9.1.5"
   },
   "devDependencies": {
-    "electron": "^40.0.0"
-  }
+    "electron": "^40.1.0",
+    "electron-builder": "^26.7.0"
+  },
+  "build": {
+  "appId": "com.musicmanager.app",
+  "productName": "Music Manager",
+  "win": {
+    "target": "nsis",
+    "icon": "public/logo.png"
+  },
+  "directories": {
+    "output": "dist"
+  },
+  "extraResources": [
+    "./bin/**"
+  ]
+}
 }
