--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,35 +4,33 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: write
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-    - name: Install Dependencies
-      run: npm install
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Install Pkg
-      run: npm install -g pkg
+      - name: Install pkg
+        run: npm install -g pkg
 
-    - name: Compile to EXE
-      # This compiles for Windows (win), MacOS (macos), and Linux (linux)
-      # It outputs a file named 'music-app-win.exe'
-      run: pkg . --targets node18-win-x64 --output music-app-win.exe
+      - name: Build Executable
+        run: pkg . --targets node18-win-x64 --output music-app.exe
 
-    - name: Upload Artifact
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./music-app-win.exe
-        asset_name: MusicApp.exe
-        asset_content_type: application/octet-stream
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: music-app.exe
