--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron-builder": "^26.7.0",
     "husky": "^9.1.7"
   },
+  
   "build": {
     "appId": "com.musicmanager.app",
     "productName": "Music Manager",
@@ -47,5 +48,15 @@
     "extraResources": [
       "./bin/**"
     ]
-  }
+  },
+  "pkg": {
+  "assets": [
+    "public/**/*",
+    "views/**/*",
+    "bin/**/*"
+  ],
+  "targets": [
+    "node18-win-x64"
+  ]
+}
 }
